Generazione numeri + stampa in pagina

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 
         <main>
             <h1>Simon Says</h1>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
+            <div class="container"></div>
         </main>
     
         <!-- JAVASCRIPT -->
