--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <main>
             <h1>Simon Says</h1>
             <div class="container"></div>
+            <div class="results"></div>
         </main>
     
         <!-- JAVASCRIPT -->
